# sweeten

./: CHANGELOG.md  Cargo.toml  README.md  bench_summary.py  crushy.toml  doc-style.css  palette.htm
benches/: flex_vs_iced.rs  history.json
docs/: CHANGELOG.md
examples/: README.md  checkbox.rs  drag.rs  fit_text.rs  flex.rs  focus.rs  grouped.rs  gt.rs  gt_clickable.rs  list.rs  local_text_input.rs  mouse_area.rs  pick_list.rs  profile_flex.rs  progress_bar.rs  scroll_to_item.rs  table.rs  text_input.rs  transition.rs
examples/grid_stack/: Cargo.toml
examples/grid_stack/fonts/: icons.toml
examples/grid_stack/src/: icon.rs  main.rs
examples/grouped/: Cargo.toml  build.rs
examples/grouped/fonts/: icons.toml
examples/grouped/src/: icon.rs  main.rs
examples/tile_grid/: Cargo.toml
examples/tile_grid/fonts/: icons.toml
examples/tile_grid/src/: grouped.rs  icon.rs  main.rs
src/: animation.rs  helpers.rs  lib.rs  widget.rs
src/operation/: position.rs
src/widget/: button.rs  checkbox.rs  column.rs  drag.rs  fit_text.rs  flex.rs  grid_stack.rs  gt.rs  list.rs  local_text_input.rs  mouse_area.rs  operation.rs  overlay.rs  pick_list.rs  progress.rs  progress_bar.rs  row.rs  table.rs  text_input.rs  tile_grid.rs  toggler.rs  transition.rs
src/widget/flex/: alignment.rs  child.rs  column.rs  engine.rs  helpers.rs  row.rs
src/widget/grid_stack/: content.rs  engine.rs  item_id.rs  state.rs  title_bar.rs  widget.rs
src/widget/gt/: cell.rs  column.rs  fmt.rs  row_group.rs  selector.rs  style.rs  summary_row.rs
src/widget/operation/: position.rs
src/widget/overlay/: menu.rs
src/widget/text_input/: value.rs
src/widget/tile_grid/: configuration.rs  content.rs  drop.rs  engine.rs  item_id.rs  rect.rs  shared.rs  state.rs  title_bar.rs  widget.rs
tests/: gt_scrollable_layout.rs  text_input_scroll.rs  tile_grid_groups.rs
